# cppbackend

sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/precode/src/: cafeteria.h  ingredients.h
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_parsing.cpp  json_parsing.h  json_str_literal.h  main.cpp  request_handler.cpp  sync_write_os.h
sprint1/problems/map_json/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  main.cpp  request_handler.h
sprint1/problems/radio/precode/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/precode/src/: main.cpp
sprint1/problems/sync_server/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp
sprint2/examples/boost_log/: CMakeLists.txt  main.cpp  run_conan.sh
sprint2/examples/boost_log/build_debug/: conaninfo.txt
sprint2/examples/logger/solution/: main.cpp  run_conan.sh
sprint2/examples/logger/solution/build_debug/: conanbuildinfo.cmake  create_test_logs  rotate_log_myapp
sprint2/problems/game_state/solution/: run_conan.sh
sprint2/problems/game_state/solution/src/app/: application.cpp  application.h  player.h
sprint2/problems/game_state/solution/src/handler/: api_handler.cpp  api_handler.h  request_handler.h  request_utils.h
sprint2/problems/game_state/solution/src/http/: server.cpp
sprint2/problems/game_state/solution/src/json/: str_literal.h
sprint2/problems/game_state/solution/src/logging/: log_utils.cpp
sprint2/problems/game_state/solution/src/model/: dog.cpp  dog.h  game.cpp  game.h  gamesession.cpp  gamesession.h  map.cpp
sprint2/problems/join_game/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/join_game/solution/src/: log_request.h  main.cpp  path_utils.cpp  path_utils.h
sprint2/problems/join_game/solution/src/app/: player.cpp  player.h  playertokens.cpp  playertokens.h
sprint2/problems/join_game/solution/src/http/: CMakeLists.txt
sprint2/problems/join_game/solution/src/json/: parsing.cpp  parsing.h  str_literal.h
sprint2/problems/join_game/solution/src/logging/: log_utils.h  str_literal.h
sprint2/problems/join_game/solution/src/model/: dog.cpp  dog.h  game.cpp  game.h  gamesession.cpp  gamesession.h  map.cpp  map.h
sprint2/problems/join_game/solution/src/request/: handler.cpp  handler.h  utils.h
sprint2/problems/join_game/solution/src/response/: utils.cpp  utils.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/move_players/solution/src/: log_request.cpp  log_request.h  main.cpp  sync_write_os.h
sprint2/problems/move_players/solution/src/json/: loader.cpp  (+4 more)
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  run.sh  run_conan.sh
sprint2/problems/server_logging/solution/build_debug/: conanbuildinfo.txt
sprint2/problems/server_logging/solution/build_debug/.cmake/api/v1/reply/: cache-v2-f7a7a0a73bcb807117bd.json  cmakeFiles-v1-85e05da9cca176e64a0b.json  codemodel-v2-35defc96a62b419c89b7.json  index-2024-03-02T19-54-58-0643.json  target-game_server-Debug-6747e45092d479b3a568.json
sprint2/problems/server_logging/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  json_parsing.cpp  json_str_literal.h  log_request.cpp  log_request.h  logger.h  logger_str_literal.cpp  logger_str_literal.h  logger_utils.cpp  logger_utils.h  main.cpp  path_utils.cpp  path_utils.h  request_handler.cpp  request_handler.h  response_utuls.cpp
sprint2/problems/static_content/solution/: CMakeLists.txt  run_conan.sh
sprint2/problems/static_content/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_parsing.cpp  json_parsing.h  main.cpp  my_logger.h  path_utils.cpp  path_utils.h  request_handler.h  request_utils.h  response_utuls.h  sync_write_os.h
sprint2/problems/time_control/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/time_control/solution/src/: logger.cpp
(+46 files in other folders)
